--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - lib/image.png
+    - lib/assets/images/image.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
